20.jan.24 - photobook update

--- a/website/photobook/index.css
+++ b/website/photobook/index.css
@@ -13,6 +13,12 @@ body {
 	box-sizing: border-box;
 }
 
+::selection {
+	background: #FFFAC4;
+	color: black;
+
+}
+
 header {
 	background: #F27688;
 	position: relative;
