--- a/website/scrapbook/body.css
+++ b/website/scrapbook/body.css
@@ -119,7 +119,6 @@ header.page {
 	border: 2px solid var(--green);
 	border-radius: 3px;
 	line-height: 0px;
-	overflow: hidden;
 	transition-duration: 0.5s;
 }
 
@@ -132,6 +131,21 @@ header.page {
 	float: left;
 }
 
+.left.pin::after {
+	content: url('/!g/deco/pin.png');
+	position: absolute;
+	top: -8%;
+	left: -6%;
+	rotate: -90deg;
+}
+
+.right.pin::after {
+	content: url('/!g/deco/pin.png');
+	position: absolute;
+	top: -9%;
+	rotate: 10deg;
+}
+
 .left:hover {
 	rotate: -2deg;
 }
@@ -141,10 +155,14 @@ header.page {
 	float: right;
 }
 
+.right:hover {
+	rotate: 2deg;
+}
+
 .page {
 	margin: auto;
 	margin-top: 40px;
-	max-width: 700px;
+	max-width: 800px;
 	border: 1px solid lightblue;
 	padding: 15px;
 	background: url('/notebook/!g/grid-blue.png');
