updated archived layouts

--- a/website/notebook/archive/layouts/index.html
+++ b/website/notebook/archive/layouts/index.html
@@ -73,7 +73,8 @@
 		<img title="v1" src="230415-music-v1.jpg">
 
 		<h2>journal</h2>
-		<img src="231214-journal.jpg">
+		<img title="march 2024" src="240303-journal.jpg">
+		<img title="june? 2024" src="231214-journal.jpg">
 		<img title="april 2023" src="230420-logs.jpg">
 
 		<h2>blog</h2>
