--- a/website/journal/entry.css
+++ b/website/journal/entry.css
@@ -33,11 +33,13 @@ hr {
 	border: 0px;
 }
 
-#log {
+#log,
+main {
 	padding: 0px;
 	max-width: 700px;
 	margin: auto;
 	margin-bottom: 10px;
+	scrollbar-color: #E4A79D #fffcdc;
 }
 
 i {
